--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
   },
   "homepage": "https://github.com/InhoStudios/TwitchGameTools#readme",
   "dependencies": {
-    "twitch-js": "^1.2.17"
+    "fs": "0.0.1-security",
+    "twitch-js": "^1.2.17",
+    "url": "^0.11.0"
   },
   "devDependencies": {}
 }
